...

  Widget _emailField(Bloc bloc){
    return StreamBuilder(
      stream: bloc.email,
      builder: (context, snapshot) {
        return AppTextField(
          key: const ValueKey('emailSignInField'),
          controller: _emailController,
          keyboardType: TextInputType.emailAddress,
          focusNode: _focusNode,
          hint: "Tu email",
          label: "Email",
          error: snapshot.error as String?,
...

  Widget _passwordField(Bloc bloc){
    return StreamBuilder(
      stream: bloc.password,
      builder: (context, snapshot) {
        return AppTextField(
          key: const ValueKey('passwordSignInField'),
          controller: _passwordController,
          hint: "Tu contraseña",
          label: "Contraseña",
          error: snapshot.error as String?,
          onChanged: bloc.changePassword,
          obscureText: true,
...
