...

  Widget _emailField(Bloc bloc){
    return StreamBuilder(
      stream: bloc.email,
      builder: (context, snapshot) {
        return AppTextField(
          key: const ValueKey('emailSignUpField'),
          controller: _emailController,
          keyboardType: TextInputType.emailAddress,
          focusNode: _focusNode,
          hint: "Tu email",
          label: "Email",
          error: snapshot.error as String?,
...
            const PopupMenuItem<Menu>(
              value: Menu.mentorizado,
              child: Text('Mentorizado'),
            ),
            const PopupMenuItem<Menu>(
              value: Menu.profesor,
              child: Text('Profesor'),
            ),
          ]
        )
      )
    );
  }
...
